# LTPDA

./: .gitignore  README.md  a15.xml  a5.xml  example1.xml  logo.ai  make_package.m  make_release.sh  ~ai-f1a43cda-dc07-4496-8d3d-e21e4df45e0f_.tmp
python/: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  DEVELOPMENT_README.md  Makefile  README.md  main.py  pyproject.toml  setup.py
python/docker/: Dockerfile
python/pyda/: __init__.py  fsdata.py  functions.py  pzmodel.py  tsdata.py  xydata.py  ydata.py
python/pyda/Examples/: pyda_FIR_filter_testing.ipynb  pyda_IIR_filter_testing.ipynb  pyda_diff_testing.ipynb  pyda_example_delay.ipynb  pyda_function_constructors.ipynb  pyda_interpolation.ipynb  pyda_logpsd_test.ipynb  pyda_lpsd_testing.ipynb  pyda_ltpda_psd_compare.ipynb  pyda_psd_testing.ipynb  pyda_pzmodel.ipynb  pyda_repository.ipynb  pyda_repository_timeseries.ipynb  pyda_resample.ipynb  pyda_split_testing.ipynb  pyda_test_errorbars.ipynb  pyda_test_save_load.ipynb  pyda_testing.ipynb  pyda_tfe_testing.ipynb  pyda_tfestimate.ipynb  pyda_xydata_testing.ipynb  pyda_ydata_testing.ipynb  test_lpsd_Laurant_timeseries.ipynb
python/pyda/dsp/: __init__.py  filter.py  noisegen.py  spectral.py
python/pyda/exceptions/: __init__.py  rangeexceptions.py  sizeexceptions.py  typeexceptions.py
python/pyda/mixins/: __init__.py  _tsdata_dsp.py  _xydata_diff.py  _xydata_dsp.py  (+3 more)
python/tests/: test_axis.py  test_operators.py  test_pz.py  test_pzmodel.py  test_spectral.py  test_specwin.py  test_tsdata.py  test_unit.py  test_xydata.py  test_ydata.py
(+5017 files in other folders)
