[tool.poetry]
name = "pyda"
version = "0.1.0"
description = "A python package for LTPDA-like data analysis."
authors = ["Martin Hewitson <hewitson@aei.mpg.de>"]
repository = "https://gitlab.com/pyda-group/pyda"
documentation = "https://gitlab.com/pyda-group/pyda/-/blob/master/README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.15"
scipy = ">=1.5,<3.0"
numpy = ">=1.18,<3.0"
importlib-metadata = {version = "^1.1.3", python = "<=3.14"}
matplotlib = ">=3.0,<5.0"
h5py = ">=3,<4"
#lpsd = ">=0.2,<0.3"
lpsd = ">=1.0.2,<2.0"
PyMySQL = ">=1.1,<2.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
mypy = "^0.931"
pylint = "^2.12.1"
isort = "^5.10.1"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose -x --log-level=INFO --cov pyda --cov-report term-missing --no-cov-on-fail --cov-report=html --cov-report=xml"
testpaths = [
    "tests",
]

[tool.coverage]
    [tool.coverage.run]
    omit =[]
    [tool.coverage.report]
    fail_under = 54
    omit =[]

    [tool.coverage.html]
    directory = "htmlcov"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
